--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,16 @@
 set -g status-style "bg=#202123, fg=#FFFFFF"
-unbind C-b
+set -g default-terminal xterm-256color
 set -g prefix C-a
 set -g history-limit 1000
 set -g base-index 1
-setw -g pane-base-index 1
+set -g pane-base-index 1
+set -g status-right '#[fg=red,bg=default]#(somecommand.bash) #[fg=yellow]%d.%m / %H:%M'
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
+set -g window-status-current-style 'fg=white bg=#1c1c1c bold'
+set -g window-status-current-format ' #I#[fg=white]:#[fg=white]#W#[fg=white]#F '
+
+set -g window-status-style 'fg=white bg=#202123'
+set -g window-status-format ' #I#[fg=white]:#[fg=white]#W#[fg=white]#F '
+
+set -g window-status-bell-style 'fg=white bg=colour1 bold'
