--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -6,3 +6,17 @@ line-number = "relative"
 
 [editor.file-picker]
 hidden = false
+
+[editor.statusline]
+left = ["mode", "spinner", "file-name"]
+center = []
+right = ["diagnostics", "selections", "position", "file-encoding", "file-line-ending", "file-type"]
+separator = "│"
+mode.normal = "NORMAL"
+mode.insert = "INSERT"
+mode.select = "SELECT"
+
+[keys.normal]
+C-s = ":w"
+C-q = ":q"
+C-j = "save_selection"
